fix: record page header spacing

--- a/client/src/css/SpeechToText.css
+++ b/client/src/css/SpeechToText.css
@@ -12,6 +12,8 @@ h1 {
 }
 
 p {
+    margin-top: 0;
+    margin-bottom: 3%;
     font-size: 1.2rem;
 }
 
